Fixed button icons on mobile devices 2

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,11 +1,16 @@
 .btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5px;
+
   border: none;
   background-color: white;
   border-radius: 50%;
   height: 2em;
   width: 2em;
   box-shadow: 0 0 10px gray;
-  font-size: 1.8em;
+  font-size: 24px;
   position: absolute;
   cursor: pointer;
 }
@@ -25,11 +30,11 @@
   right: -1em;
 }
 
-.icon{
+/*.icon{
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
   align-self: center;
-  font-size: inherit;
-}
+  font-size: 1.8rem;
+}*/
